--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi
 uvicorn[standard]
 jinja2
 python-multipart
-torch==2.1.0
-torchaudio==2.1.0
-transformers==4.40.1
+torch
+torchaudio
+transformers
 sentencepiece
